<resources>
    <string name="app_name">GeniusUser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="myProfile">Meu perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_email">Seu e-mail</string>
    <string name="your_name">Seu nome</string>
    <string name="your_birth_date">Nascimento</string>
    <string name="cantact_us">Contate-nos</string>
    <string name="complaing">Reclame aqui</string>
    <string name="configuration">Configurações</string>
    <string name="my_galerry">Minhas fotos</string>
    <string name="estimate">Orçamento</string>
    <string name="addCriminalHistoric">Anexar Ficha corrida</string>
    <string name="sexo">Sexo</string>
    <string name="educationDegree">Grau de Escolaridade</string>
    <string name="professionalArea">Área profissional</string>
    <string name="payAttation">ATENÇÃO</string>
    <string name="text_use_with_internet">Para uma melhor experiência e relacionamento com seu cliente, sempre mantenha sua Internet e GPS habilitados no dia em que for atendê-los.</string>
    <string name="male">Masculino</string>
    <string name="female">Feminio</string>
    <string name="got_it">Entendi</string>
    <string name="action_see_map">Ver no mapa</string>
    <string name="title_activity_maps">Map</string>
    <string name="agenda_visit">Agendar Visita</string>
    <string name="chooseAgenda">Escolha um horário</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="my_agenda">Minha Agenda</string>
    <string name="readQrCode">Ler QR-Code</string>
    <string name="home">Início</string>
    <string name="historic">Histórico</string>
    <string name="works">Trabalhos</string>
    <string name="more">Mais</string>
    <string name="action_store_location">Locais</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_is_new_user">É um novo usuário?</string>
    <string name="action_enter">Entrar</string>
    <string name="action_your_address">Seu endereço</string>
    <string name="nav_agenda">Agenda</string>
    <string name="nav_favorite">Favoritos</string>
    <string name="nav_config">Config.</string>
    <string name="choose_professional">Escolha um profissional</string>
    <string name="nav_finance">Finanças</string>
    <string name="area_woodwork">Marcenaria</string>
    <string name="area_air_conditioning">Ar Condicionado</string>
    <string name="area_eletrical">Eletrica</string>
    <string name="area_diarist">Diarista</string>
    <string name="area_brickwork">Alvenaria e Acabamento</string>
    <string name="area_painting">Pintura</string>
    <string name="area_mechanics">Mecânica e Funilaria</string>
    <string name="area_unknow">Não informada</string>
    <string name="do_you_have_question_or_sugestion">Dúvida ou segestão?</string>
    <string name="end_page">FIM</string>
    <string name="title_activity_client_agenda">Sua Agenda</string>
    <string name="title_activity_client_home">Início</string>
    <string name="title_activity_client_historic">Seu Histórico</string>
    <string name="title_activity_client_favorite">Seus Favoritos</string>
    <string name="title_activity_client_financial">Financeiro</string>
    <string name="i_m_client">Sou Cliente</string>
    <string name="wellcome">Bem-vindo</string>
</resources>
