<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHomeCli"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuAgendaCli"
        android:enabled="true"
        android:icon="@drawable/book_multiple"
        android:title="@string/nav_agenda"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuHistoryCli"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/historic"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuMyFavoriteCli"
        android:enabled="true"
        android:icon="@drawable/favorite_heart"
        android:title="@string/nav_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuChartCli"
        android:enabled="true"
        android:icon="@drawable/finance_chart"
        android:title="@string/nav_finance"
        app:showAsAction="ifRoom" />
</menu>