<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHome"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuHistory"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/historic"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuMyWorks"
        android:enabled="true"
        android:icon="@drawable/briefcase"
        android:title="@string/works"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuMore"
        android:enabled="true"
        android:icon="@drawable/more_vertical"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>