<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="br.com.barcadero.geniususer.fragments.ProfessionalFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            >
            <include layout="@layout/basic_profile_layout"/>
            <include layout="@layout/layout_textview_cpf"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Forma de preço:"/>
            <Spinner
                android:id="@+id/spProfessionalPriceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Forma de atendimento"/>
            <Spinner
                android:id="@+id/spProfessionalAttendanceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/educationDegree"/>
            <Spinner
                android:id="@+id/spProfessionalEducationDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/professionalArea"/>
            <Spinner
                android:id="@+id/spProfessionalArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Anexa Ficha corrida:"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addCriminalHistoric"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="@string/payAttation"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/text_use_with_internet"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSaveProfessional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/blue"
        android:src="@drawable/account_check_save" />

</FrameLayout>
